[project]
name = "tap-jira"
version = "0.0.1"
description = "Singer tap for tap-jira, built with the Meltano Singer SDK."
readme = "README.md"
authors = [ { name = "Ethan Stein" } ]
maintainers = [ { name = "MeltanoLabs", email = "hello@meltano.com" } ]
keywords = [
    "ELT",
    "tap-jira",
]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "requests~=2.32.2",
    "typing-extensions~=4.15.0; python_version < '3.12'",
    "singer-sdk~=0.53.0",
]
optional-dependencies.s3 = [
    "s3fs==2025.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9",
    "mypy>=1.19.0",
    "ruff>=0.14.7",
    "singer-sdk[testing]",
    "ty>=0.0.1a29",
    "types-requests>=2.32.4",
]

[tool.poetry]
requires-poetry = ">=2.2.0"

[tool.mypy]
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_jira"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-jira = 'tap_jira.tap:TapJira.cli'
