[project]
name = "tap-jira"
version = "0.0.1"
description = "Singer tap for tap-jira, built with the Meltano Singer SDK."
authors = [{ name = "Ethan Stein" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
maintainers = [{ name = "MeltanoLabs", email = "hello@meltano.com" }]
keywords = [
    "ELT",
    "tap-jira",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests~=2.32.2",
    "typing-extensions~=4.15.0; python_version < '3.12'",
    "singer-sdk~=0.53.0",
]

[project.optional-dependencies]
s3 = ["s3fs==2026.1.0"]

[project.scripts]
tap-jira = "tap_jira.tap:TapJira.cli"

[dependency-groups]
dev = [
    "pytest>=9",
    "mypy>=1.19.0",
    "ruff>=0.14.7",
    "singer-sdk[testing]",
    "ty>=0.0.1a29",
    "types-requests>=2.32.4",
]

[build-system]
requires = [
    "hatchling==1.28",
]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_jira"]

[tool.ruff.lint.pydocstyle]
convention = "google"
