[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.5",
  "hatchling>=1.30.1,<2",
]

[project]
name = "tap-jira"
description = "Singer tap for tap-jira, built with the Meltano Singer SDK."
readme = "README.md"
keywords = [
  "ELT",
  "tap-jira",
]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "backports-datetime-fromisoformat>=2.0.3; python_version<'3.11'",
  "requests~=2.34.2",
  "singer-sdk~=0.54.5",
  "typing-extensions~=4.15.0; python_version<'3.12'",
]
[[project.authors]]
name = "Ethan Stein"
[[project.maintainers]]
name = "MeltanoLabs"
email = "hello@meltano.com"
[project.optional-dependencies]
s3 = [ "s3fs>=2026.4" ]
[project.scripts]
tap-jira = "tap_jira.tap:TapJira.cli"

[dependency-groups]
dev = [
  "mypy>=1.20.2",
  "pytest>=9.0.3",
  "ruff>=0.15.12",
  "singer-sdk[testing]",
  "ty>=0.0.42",
  "types-requests>=2.33.0.20260408",
]

[tool.hatch.version]
fallback-version = "0.0.0.dev0"
source = "vcs"

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = [ "ALL" ]
[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
[tool.ruff.lint.isort]
known-first-party = [ "tap_jira" ]
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D",    # pydocstyle
  "S101", # assert
  "S105", # hardcoded-password-string
]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
enable_error_code = [ "ignore-without-code", "redundant-expr", "truthy-bool" ]
strict = true
warn_unused_configs = true
